[gd_scene load_steps=8 format=2]

[ext_resource path="res://font/Crickhollow Demo.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resim/geri.png" type="Texture" id=2]
[ext_resource path="res://kod/Alistirma(Secme).gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 45
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="Alistirma(Secme)" type="Node2D"]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="."]
margin_right = 640.0
margin_bottom = 320.0

[node name="Alistirmalar" type="Label" parent="."]
margin_top = 48.0
margin_right = 640.0
margin_bottom = 94.0
custom_fonts/font = SubResource( 1 )
text = "   Alıştırmalar   "
align = 1
valign = 1

[node name="KelimeBilme" type="Button" parent="."]
margin_left = 88.0
margin_top = 120.0
margin_right = 296.0
margin_bottom = 160.0
custom_colors/font_color_focus = Color( 0.745098, 0.784314, 0.352941, 1 )
custom_colors/font_color = Color( 0.745098, 0.784314, 0.352941, 1 )
custom_colors/font_color_hover = Color( 0.745098, 0.784314, 0.352941, 1 )
custom_colors/font_color_pressed = Color( 0.745098, 0.784314, 0.352941, 1 )
custom_fonts/font = SubResource( 2 )
text = "Kelime Bilme"

[node name="SıklıSorular" type="Button" parent="."]
margin_left = 344.0
margin_top = 120.0
margin_right = 552.0
margin_bottom = 160.0
custom_colors/font_color_disabled = Color( 0.776471, 0.67451, 0.00392157, 1 )
custom_colors/font_color_focus = Color( 0.776471, 0.67451, 0.00392157, 1 )
custom_colors/font_color = Color( 0.776471, 0.67451, 0.00392157, 1 )
custom_colors/font_color_hover = Color( 0.776471, 0.67451, 0.00392157, 1 )
custom_colors/font_color_pressed = Color( 0.776471, 0.67451, 0.00392157, 1 )
custom_fonts/font = SubResource( 3 )
text = "Şıklı Sorular"

[node name="Geri" type="Button" parent="."]
margin_left = 16.0
margin_top = 280.0
margin_right = 80.0
margin_bottom = 308.0
custom_fonts/font = SubResource( 4 )
icon = ExtResource( 2 )
icon_align = 1

[connection signal="pressed" from="KelimeBilme" to="." method="_on_KelimeBilme_pressed"]
[connection signal="pressed" from="SıklıSorular" to="." method="_on_SklSorular_pressed"]
[connection signal="pressed" from="Geri" to="." method="_on_Geri_pressed"]
